kustomizer/tests/kustomizer/testdata/reference/back-reference-admission-policy/admission.yaml
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicy
metadata:
  name: sample-policy
spec:
  failurePolicy: Fail
  paramKind:
    apiVersion: apps/v1
    kind: Deployment
  matchConstraints:
    resourceRules:
    - apiGroups:
      - apps
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - deployments
  validations:
    - expression: "!object.metadata.name.startsWith('test-')"
      message: prefix 'test-' is not allowed
      reason: Invalid
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: sample-policy-binding
spec:
  policyName: sample-policy
  validationActions:
  - Deny
